--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "composepress/models",
-  "license": "GPL3",
+  "license": "GPL-3.0-or-later",
   "authors": [
     {
       "name": "Derrick Hammer",
